<resources>
    <string name="app_name">中工储运-货主</string>
    <string name="login">立即登录</string>
    <string name="my_order">我的订单</string>
    <string name="content">常用联系人</string>
    <string name="collection">我的收藏</string>
    <string name="logistics">常用物流商</string>
    <string name="send">发货</string>
    <string name="user_center">个人中心</string>
    <string name="company">公司信息</string>
    <string name="request_error">请求失败</string>
    <string name="send_goods">发货</string>
    <string name="select">物流商查询</string>
    <string name="start_way">请输入起点</string>
    <string name="end_way">请输入终点</string>
    <string name="input_company">请输入物流商关键字</string>
    <string name="send_info">发货人信息</string>
    <string name="send_person">发  货  人:</string>
    <string name="phone_number">手  机  号:</string>
    <string name="address">地               址:</string>
    <string name="address_detail">详细地址:</string>
    <string name="addressSoOn">详情街道等</string>
    <string name="receiverInfo">收货人信息</string>
    <string name="login_button">登陆</string>
    <string name="regest">注册</string>
    <string name="user_name_is_null">用户名不能为空</string>
    <string name="pws_is_null">密码不能为空</string>
    <string name="usual_content">常用联系人</string>
    <string name="sender">发货人:</string>
    <string name="sender_address">发货地址:</string>
    <string name="sender_net">发货网点地址:</string>
    <string name="receiver">收货人:</string>
    <string name="receiver_address">收货地址:</string>
    <string name="receiver_net">收货网点地址:</string>
    <string name="sender_driver">配送司机:</string>
    <string name="my_account">我的账户</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment_star">评分：</string>
    <string name="input_num">请输入手机号码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_again">请输再次输入密码</string>
    <string name="commit">提交</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_company_user">CompanyUserActivity</string>
    <string name="company_name">公司名称</string>
    <string name="company_address">公司地址</string>
    <string name="user_number">法人电话</string>

    <!--login-->
    <string name="hint_login_error_nameorpwd">用户名和密码不匹配</string>
    <string name="hint_login_error_msg">登录异常, 请重试</string>
    <string name="hint_login_succeed_logined">已登录</string>
    <string name="hint_login_error_data">数据异常, 请重试</string>
    <string name="hint_login_error_access">访问异常!</string>
    <string name="hint_login_error_no_permission">无访问权限!</string>
</resources>
